fix unnecessary scrollbar on hover

--- a/packages/web/src/components/usdc-purchase-details-modal/USDCPurchaseDetailsModal.module.css
+++ b/packages/web/src/components/usdc-purchase-details-modal/USDCPurchaseDetailsModal.module.css
@@ -1,4 +1,4 @@
-.content > div {
+.content > div:first-child {
   display: flex;
   flex-direction: column;
   align-items: center;
